--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
     <header>
         <div class="wrapper">
             <nav>
-                <div class="logo">Teman.AL</div>
+                <div class="Logo">
+                    <img src="assets/images/logo.png" alt="Logo" />
+                </div>
+                <div class="judul">Teman.AL</div>
                 <ul>
                     <li>
                         <a href="#">Home</a>
@@ -44,7 +47,10 @@
             <!-- akhir dekstop menu -->
 
             <nav class="mobile-nav">
-                <div class="logo">Teman.AL</div>
+            <div class="Logo">
+                    <img src="assets/images/logo.png" alt="Logo" />
+                </div>
+                <div class="judul">Teman.AL</div>
                 <div class="menu-icon">
                     <img src="assets/images/menu-icon.svg" alt="" />
                 </div>
@@ -123,10 +129,8 @@
 		<div class="team-content">
 			<div class="box">
 				<img src="assets/images/damss.gif">
-				<h3>Adam Monhardi</h3>
-				<h5>UI/UX &
-          Frontend
-          Developer</h5>
+				<h3>Adam <br> Monhardi</h3>
+				<h5>UI/UX & Frontend Developer</h5>
 				<div class="icons">
           		    <a href="https://www.linkedin.com/in/adam-monhardi-a6918a215/"><i class="ri-linkedin-fill"></i></a>
 					<a href="mailto:monhardia@gmail.com"><i class="ri-mail-fill"></i></a>
@@ -136,7 +140,7 @@
 
 			<div class="box">
 				<img src="assets/images/pung.gif">
-				<h3>Januario Alexander</h3>
+				<h3>Januario <br> Alexander</h3>
 				<h5>Electrical Engineer</h5>
 				<div class="icons">
                     <a href="https://www.linkedin.com/in/januario-alexander-palullungan-pasau-24b417246?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="ri-linkedin-fill"></i></a>
@@ -148,7 +152,7 @@
 			<div class="box">
 				<img src="assets/images/pacas.gif">
 				<h3>Casmika Saputra</h3>
-				<h5>Quality <br> Controll</h5>
+				<h5>Quality <br> Control</h5>
 				<div class="icons">
                     <a href="https://www.linkedin.com/in/casmikasaputra/"><i class="ri-linkedin-fill"></i></a>
 					<a href="mailto:casmika@telkomuniversity.ac.id"><i class="ri-mail-fill"></i></a>
