--- a/index.html
+++ b/index.html
@@ -130,7 +130,9 @@
 			<div class="box">
 				<img src="assets/images/damss.gif">
 				<h3>Adam <br> Monhardi</h3>
-				<h5>UI/UX & Frontend Developer</h5>
+				<h5>UI/UX &
+          Frontend
+          Developer</h5>
 				<div class="icons">
           		    <a href="https://www.linkedin.com/in/adam-monhardi-a6918a215/"><i class="ri-linkedin-fill"></i></a>
 					<a href="mailto:monhardia@gmail.com"><i class="ri-mail-fill"></i></a>
@@ -140,7 +142,7 @@
 
 			<div class="box">
 				<img src="assets/images/pung.gif">
-				<h3>Januario <br> Alexander</h3>
+				<h3>Januario Alexander</h3>
 				<h5>Electrical Engineer</h5>
 				<div class="icons">
                     <a href="https://www.linkedin.com/in/januario-alexander-palullungan-pasau-24b417246?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="ri-linkedin-fill"></i></a>
@@ -152,7 +154,7 @@
 			<div class="box">
 				<img src="assets/images/pacas.gif">
 				<h3>Casmika Saputra</h3>
-				<h5>Quality <br> Control</h5>
+				<h5>Quality <br> Controll</h5>
 				<div class="icons">
                     <a href="https://www.linkedin.com/in/casmikasaputra/"><i class="ri-linkedin-fill"></i></a>
 					<a href="mailto:casmika@telkomuniversity.ac.id"><i class="ri-mail-fill"></i></a>
@@ -185,7 +187,7 @@
 	  <div class="box">
                 <img src="assets/images/jong.gif">
 				<h3>Salim Ammar Rasyid</h3>
-				<h5>Software Engineer</h5>
+				<h5>Software <br> Engineer</h5>
 				<div class="icons">
 			        <a href="https://www.linkedin.com/in/salim-ammar-rasyid-355437246/"><i class="ri-linkedin-fill"></i></a>
 					<a href="mailto:ammarrasyid2106@gmail.com"><i class="ri-mail-fill"></i></a>
