Update index.html 1

--- a/index.html
+++ b/index.html
@@ -21,10 +21,7 @@
     <header>
         <div class="wrapper">
             <nav>
-                <div class="Logo">
-                    <img src="assets/images/logo.png" alt="Logo" />
-                </div>
-                <div class="judul">Teman.AL</div>
+                <div class="logo">Teman.AL</div>
                 <ul>
                     <li>
                         <a href="#">Home</a>
@@ -47,12 +44,11 @@
             <!-- akhir dekstop menu -->
 
             <nav class="mobile-nav">
-            <div class="Logo">
-                    <img src="assets/images/logo.png" alt="Logo" />
+                <div class="logo">
+                    Teman.AL
                 </div>
-                <div class="judul">Teman.AL</div>
                 <div class="menu-icon">
-                    <img src="assets/images/menu-icon.svg" alt="" />
+                    <img src="assets/images/menu-icon.svg" alt="Menu Icon" />
                 </div>
             </nav>
 
